# open-responses-server

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  index.md  pyproject.toml  release.py  run_tests.sh  servers_config.json  setup.py  sonar-project.properties  start.py  test.db  test_crawl.sh
.claude/skills/markdownlint/: SKILL.md
.claude/skills/markdownlint/scripts/: lint-docs.sh
.claude/skills/pr-review/: SKILL.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  discussion.yaml  suggestion.yaml
.github/workflows/: auto-release.yml  docker-publish.yml  pages.yml  pr-test.yml  publish.yml  release.yml  security-checks.yml  security-scan.yml  sonarqube.yml
_includes/: footer_custom.html
demo/: chat_completions.sh
docs/: SECURITY.md  add-mcp-client-request.md  add-mcp-client-support.md  cli-local.md  events-and-tool-handling.md  extend-instructions.md  open-responses-server.md  pip-publish-instructions.md  responses_flow.md  testing-guide.md  using-uv.md
docs/plan/: chat_completions_mcp_enhancement.md  refactor_mcp_server_execution.md  refactor_mcp_server_request.md  refactor_mcp_servers.md  refactor_server.md  refactor_server_finish.md
docs/prompts/: add-chat-completions-history.md  add-mcp-support.py  create-mcp-tests.md  document-server.py  separate-tools.py
examples/ollama-ors-codex/: docker-compose-codex.yaml
github/.workflows/: publish.yml
src/: __init__.py  cli.py
src/open_responses_server/: __init__.py  api_controller.py  chat_completions_server.py  chat_completions_service.py  cli.py  is_mcp_tool.py  responses_service.py  server.py  server_entrypoint.py  tools_manager.py  version.py
src/open_responses_server/common/: config.py  llm_client.py  mcp_manager.py  skill_manager.py
src/open_responses_server/models/: responses_models.py
src/openai-responses-server/: cli.py
src/openai_responses_server/: __init__.py  mcp-chatbot-client.py  mcp_client.py  server.py  servers_config.json  servers_config.sqlite.json  version.py
src/openai_to_codex_wrapper/: __init__.py  cli.py  server.py  version.py
test_tools/: ai_random_assistant.py  call_chat_completions.sh  call_chat_completions_proxy.sh  call_chat_completions_proxy_mcp.sh  call_codex.sh  call_codex_mcp.sh  call_models.sh  call_models_proxy.sh  call_responses_proxy.sh  call_responses_proxy_mcp.sh  config.sh  random_mcp_config.json  random_number_mcp_server.py  run_random_mcp_server.sh  test_mcp_tools.sh  test_random_mcp_client.py  verify_call_scripts.sh
tests/: README.md  __init__.py  conftest.py  test_api_controller_endpoints.py  test_chat_completions_service.py  test_cli.py  test_e2e.py  test_llm_client.py  test_mcp_client.py  test_mcp_config.json  test_mcp_manager_ops.py  test_mcp_transport.py  test_responses_service.py  test_server.py  test_skill_manager.py
